fix(stepper): fix spacing, box-shadow, cleanup code

--- a/projects/angular/src/accordion/_accordion.clarity.scss
+++ b/projects/angular/src/accordion/_accordion.clarity.scss
@@ -189,14 +189,12 @@
     }
     .clr-accordion-panel-complete {
       .clr-accordion-header {
-        box-shadow: inset accordion-variables.$clr-accordion-border-left-width 0 0
-          accordion-variables.$clr-accordion-border-left-color-complete;
+        box-shadow: inset tokens.$cds-global-space-5 0 0 accordion-variables.$clr-accordion-border-left-color-complete;
       }
     }
     .clr-accordion-panel-error {
       .clr-accordion-header {
-        box-shadow: inset accordion-variables.$clr-accordion-border-left-width 0 0
-          accordion-variables.$clr-accordion-border-left-color-error;
+        box-shadow: inset tokens.$cds-global-space-5 0 0 accordion-variables.$clr-accordion-border-left-color-error;
       }
     }
 
@@ -230,8 +228,7 @@
     }
 
     .clr-accordion-header {
-      box-shadow: inset accordion-variables.$clr-accordion-border-left-width 0 0
-        accordion-variables.$clr-accordion-border-left-color-complete;
+      box-shadow: inset tokens.$cds-global-space-5 0 0 accordion-variables.$clr-accordion-border-left-color-complete;
     }
 
     .ng-trigger.clr-accordion-content {
@@ -241,8 +238,7 @@
 
   .clr-accordion-panel-error {
     .clr-accordion-header {
-      box-shadow: inset accordion-variables.$clr-accordion-border-left-width 0 0
-        accordion-variables.$clr-accordion-border-left-color-error;
+      box-shadow: inset tokens.$cds-global-space-5 0 0 accordion-variables.$clr-accordion-border-left-color-error;
       border-bottom: tokens.$cds-global-space-1 solid;
       border-color: accordion-variables.$clr-accordion-border-left-color-error;
       background-color: accordion-variables.$clr-accordion-active-background-color;
@@ -326,12 +322,32 @@
     }
 
     .clr-accordion-number {
+      @include mixins.generate-typography-token('BODY-14-SB-STD');
+      padding: 0 tokens.$cds-global-space-7;
+      font-weight: accordion-variables.$clr-accordion-step-title-font-weight;
       display: inline-block;
     }
-  }
 
-  .clr-step-button {
-    display: block;
-    margin-top: tokens.$cds-global-space-9;
+    .clr-accordion-description {
+      display: inline-block;
+      max-width: mixins.baselinePx(650);
+
+      @media (min-width: accordion-variables.$clr-accordion-responsive-breakpoint) {
+        margin-left: tokens.$cds-global-space-12;
+      }
+    }
+
+    .clr-accordion-title {
+      @include mixins.generate-typography-token('BODY-14-SB-STD');
+    }
+
+    .clr-accordion-description {
+      @include mixins.generate-typography-token('BODY-14-RG-STD');
+    }
+
+    .clr-step-button {
+      display: block;
+      margin-top: tokens.$cds-global-space-9;
+    }
   }
 }
